corrected require statement in application.js fixed padding and content overflow for collapsable nav

--- a/app/assets/stylesheets/bootstrap_and_customizations.scss
+++ b/app/assets/stylesheets/bootstrap_and_customizations.scss
@@ -3,12 +3,13 @@
 $navbar-default-bg: rgba(255, 255, 255, 0);
 $navbar-height: 60px;
 
-
 @import 'bootstrap';
 
 html,
 body{
   height: 100%;
+  overflow: hidden;
+  overflow-y: auto;
 }
 
 #logo {
@@ -36,4 +37,12 @@ body{
 #footer .container {
   padding-top: 10px;
   color: white;
+}
+
+.navbar-nav li a {
+  padding-top: 40px;
+}
+
+.navbar-collapse ul li a {
+  padding-left: 10px;
 }
